<resources>
    <string name="app_name">EventApp</string>
    <string name="email">Email</string>
    <string name="fullName">Full name</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="rgister">Rgister</string>
    <string name="register">Register</string>
    <string name="facebook_app_id">326988081958632</string>
    <string name="fb_login_protocol_scheme">fb326988081958632</string>
    <string name="textview">TextView</string>
    <string name="image">image</string>
    <string name="logo">logo</string>
    <string name="name2">name2</string>
    <string name="sign_out">Sign out</string>
    <string name="event">Event</string>
    <string name="events">Events</string>
    <string name="venue">venue</string>
    <string name="performer">performer</string>
    <string name="id_chip">ID</string>
    <string name="state">STATE</string>
    <string name="city">CITY</string>
    <string name="search">Search</string>
    <string name="city_state_country_id">City, State,Country, Id</string>
    <string name="country">COUNTRY</string>
    <string name="keyword">KEYWORD</string>
    <string name="genres">GENRES</string>
    <string name="slug">SLUG</string>
    <string name="learn_more">Learn more</string>
    <string name="type">TYPE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="performers">PERFORMERS</string>
    <string name="venues">VENUES</string>
    <string name="google">google</string>
    <string name="facebook">facebook</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>

</resources>