<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.profile.Favourites">

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:text="Log Out" />

    <LinearLayout
        android:id="@+id/lin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/bottom_shape_navigation"
        android:elevation="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/venues"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/color_selector"
            android:fontFamily="sans-serif-light"
            android:text="@string/venues"
            android:textColor="@color/primaryLightColor"
            android:textSize="18sp"
            app:rippleColor="#FFFFFF" />

        <Button
            android:id="@+id/performers"
            style="@style/Widget.AppCompat.Button.Borderless.Colored."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/color_selector"
            android:fontFamily="sans-serif-light"
            android:text="@string/performers"
            android:textColor="@color/primaryLightColor"
            android:textSize="18sp"
            app:rippleColor="#FFFFFF" />

        <Button
            android:id="@+id/events"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/color_selector"
            android:fontFamily="sans-serif-light"
            android:text="@string/events"
            android:textColor="@color/primaryLightColor"
            android:textSize="18sp"
            app:rippleColor="#FFFFFF" />

    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    </androidx.viewpager.widget.ViewPager>


</RelativeLayout>