<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primaryLightColor"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="731dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="377dp"
            android:layout_height="214dp"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="0dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="77dp"
                android:layout_height="74dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/text_name"
                android:layout_width="197dp"
                android:layout_height="17dp"
                android:layout_marginBottom="8dp"
                android:text="@string/name"
                app:layout_constraintBottom_toTopOf="@+id/text_country"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.622"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/text_country"
                android:layout_width="197dp"
                android:layout_height="17dp"
                android:layout_marginBottom="8dp"
                android:text="@string/country"
                app:layout_constraintBottom_toTopOf="@+id/text_city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.622"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/text_city"
                android:layout_width="197dp"
                android:layout_height="17dp"
                android:layout_marginBottom="16dp"
                android:text="@string/city"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.622"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>