<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.OptionsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:context=".view.OptionsActivity">

        <com.google.android.material.button.MaterialButton

            android:id="@+id/performerButton"
            android:layout_width="201dp"
            android:layout_height="96dp"

            android:background="@color/secondaryLightColor"
            android:backgroundTint="#DA8079"
            android:fontFamily="sans-serif-thin"
            android:text="@string/performer"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/venueButton"
            app:layout_constraintVertical_bias="0.205"
            app:shapeAppearance="@style/ShapeAppearance.AppTheme.SmallComponent"
            app:strokeColor="@android:color/holo_red_light">

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton

            android:id="@+id/venueButton"
            android:layout_width="201dp"
            android:layout_height="96dp"

            android:layout_marginTop="48dp"
            android:background="@color/secondaryLightColor"
            android:backgroundTint="#DA8079"
            android:fontFamily="sans-serif-thin"

            android:text="@string/venue"
            android:textSize="30sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventButton"

            app:shapeAppearance="@style/ShapeAppearance.AppTheme.SmallComponent"
            app:strokeColor="@android:color/holo_red_light"


            app:rippleColor="@color/primaryLightColor">

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton

            android:id="@+id/eventButton"
            android:layout_width="201dp"
            android:layout_height="96dp"

            android:background="@color/secondaryLightColor"
            android:backgroundTint="#DA8079"
            android:fontFamily="sans-serif-thin"
            android:text="@string/event"
            android:textSize="30sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.28"
            app:shapeAppearance="@style/ShapeAppearance.AppTheme.SmallComponent"
            app:strokeColor="@android:color/holo_red_light">

        </com.google.android.material.button.MaterialButton>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>