<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.venue.VenueActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="280dp"
        android:layout_height="203dp"
        android:layout_marginTop="69dp"
        android:layout_marginBottom="459dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/unnamed" />

    <TextView
        android:id="@+id/venue_title"
        android:layout_width="267dp"
        android:layout_height="46dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="368dp"
        android:fontFamily="@font/cabin_sketch"
        android:text="Title"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/city"
        android:layout_width="264dp"
        android:layout_height="46dp"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="295dp"
        android:fontFamily="@font/cabin_sketch"
        android:text="@string/city"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/venue_title"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/country"
        android:layout_width="264dp"
        android:layout_height="46dp"
        android:fontFamily="@font/cabin_sketch"
        android:text="@string/country"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/venue_title"
        app:layout_constraintVertical_bias="0.313" />

    <TextView
        android:id="@+id/id"
        android:layout_width="264dp"
        android:layout_height="46dp"
        android:fontFamily="@font/cabin_sketch"
        android:text="@string/id"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/venue_title"
        app:layout_constraintVertical_bias="0.537" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="75dp"
        android:layout_height="65dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="44dp"
        android:background="#D75A4A"
        android:backgroundTint="#D75A4A"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_baseline_music_note_24"
        android:tint="#D75A4A"
        app:backgroundTint="#D75A4A"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>
</androidx.constraintlayout.widget.ConstraintLayout>