<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primaryLightColor"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        style="@style/Widget.App.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="392dp"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TextView
                android:id="@+id/text_name"
                android:layout_width="413dp"
                android:layout_height="46dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/ribeye"
                android:text="@string/name"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/text_country"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/text_country"
                android:layout_width="183dp"
                android:layout_height="24dp"
                android:layout_marginBottom="32dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/country"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/text_city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.118"
                app:layout_constraintStart_toStartOf="@id/text_name"
                app:layout_constraintTop_toBottomOf="parent" />

            <TextView
                android:id="@+id/text_city"
                android:layout_width="192dp"
                android:layout_height="32dp"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/city"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.03"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_country" />

            <ToggleButton
                android:id="@+id/button_favorite_venue"
                android:layout_width="28dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/button_favorite"
                android:checked="false"
                android:text=""
                android:textOff=""
                android:textOn=""
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/learn_more_venue"
                app:layout_constraintTop_toBottomOf="@+id/text_name" />

            <Button
                android:id="@+id/learn_more_venue"
                android:layout_width="135dp"
                android:layout_height="44dp"

                android:layout_marginStart="9dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"

                android:backgroundTint="#D75A4A"
                android:fontFamily="sans-serif"
                android:text="Learn more"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/primaryTextColor"
                android:textSize="12sp"
                android:visibility="visible"
                app:iconTint="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_favorite_venue"
                app:layout_constraintStart_toEndOf="@+id/text_city"
                app:layout_constraintTop_toBottomOf="@+id/text_name"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>